fix: cropping image within 1:1 canvas for 1:1 image

--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,6 +1,6 @@
 .image_editor {
   width: 75vw;
-  height: 50vh;
+  height: 55vh;
   background-color: #e1e6ef;
   display: flex;
   justify-content: center;
@@ -151,6 +151,11 @@
         width: 350px;
         height: 350px;
         background-color: #f0f0f0;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+        /* overflow: hidden; Ensure overflow is hidden */
+
         .image {
           width: 100%;
           height: 100%;
@@ -158,11 +163,20 @@
           justify-content: center;
           align-items: center;
           overflow: hidden;
-          img {
-            object-fit: scale-down;
-            transition: all 0.5s;
+          .ReactCrop {
+            object-fit: cover;
             width: 100%;
             height: 100%;
+            .ReactCrop__child-wrapper {
+              object-fit: cover;
+              width: 100%;
+              height: 100%;
+              img {
+                object-fit: contain;
+                width: 100%;
+                height: 100%;
+              }
+            }
           }
           label {
             width: 100%;
